# fresh-portfolio

./: Dockerfile  fresh.gen.ts  main.ts
.flox/: env.json
.flox/env/: manifest.toml
components/: Hero.tsx  Languages.tsx  Projects.tsx
islands/: github-repo.tsx
projectfetcher/: .gitignore  Cargo.toml
projectfetcher/src/: lib.rs
routes/: _app.tsx  index.tsx
